--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "dotenv": "^16.3.1",
     "expo": "~49.0.15",
-    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
-    "firebase": "^10.6.0",
+    "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-chat": "^2.4.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
