--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.kenne.patrick.ChatAppTutorial"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4a9c3bcd-4dc1-4936-a2a3-044ec1f32473"
+      }
     }
   }
 }
